--- a/src/connection-editor/ce-new-connection.ui
+++ b/src/connection-editor/ce-new-connection.ui
@@ -4,14 +4,16 @@
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkListStore" id="new_connection_combo_model">
     <columns>
-      <!-- column-name name -->
+      <!-- column-name name, COL_MARKUP -->
       <column type="gchararray"/>
-      <!-- column-name sensitive -->
+      <!-- column-name sensitive, COL_SENSITIVE -->
       <column type="gboolean"/>
-      <!-- column-name new_func -->
+      <!-- column-name new_func, COL_NEW_FUNC -->
       <column type="gpointer"/>
-      <!-- column-name vpn_plugin -->
+      <!-- column-name vpn_plugin, COL_VPN_PLUGIN -->
       <column type="GObject"/>
+      <!-- column-name vpn_service_type, COL_VPN_SERVICE_TYPE -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkDialog" id="new_connection_type_dialog">
