c-e: support multiple "Add VPN connection" entires per service-type
For one given service-type, the UI shall be able to show multiple
entires in the list for creating a new connection.

This works by asking the plugin whether it supports multiple
"add-details". And if so, create an entry for each add-detail.

When adding a VPN connection, the editor creates a NMConnection
with initializing vpn.service-type and setting the add-detail to a
key according to the plugin's instruction.

For example, nm-openvpn supports multiple "vpn.connection-type" such as
"tls", "static-key", "password", "password-tls". With this change, it could
generate an entry for each type in nm-c-e's connection-add list. To do
that, it should announce add-details to be "tls", "static-key",
"password", "password-tls", and the "add-detail-key" to be "connection-type".

It also works to specify the add-detail on command line to create a
particular VPN connection:

  $ nm-connection-editor -c -t vpn:<SERVICE_TYPE>:<ADD_DETAIL>

For example:

  $ nm-connection-editor -c -t vpn:openconnect:nc

--- a/src/connection-editor/ce-new-connection.ui
+++ b/src/connection-editor/ce-new-connection.ui
@@ -16,6 +16,10 @@
       <column type="GObject"/>
       <!-- column-name vpn_service_type, COL_VPN_SERVICE_TYPE -->
       <column type="gchararray"/>
+      <!-- column-name add_detail_key, COL_VPN_ADD_DETAIL_KEY -->
+      <column type="gchararray"/>
+      <!-- column-name add_detail_val, COL_VPN_ADD_DETAIL_VAL -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkDialog" id="new_connection_type_dialog">
