c-e: keep description for add-list in GTK list store
Track the description of the add-list entry in the GTK list store.
This would allow also non-VPN entires to show a description, which
they currently do not.

--- a/src/connection-editor/ce-new-connection.ui
+++ b/src/connection-editor/ce-new-connection.ui
@@ -10,6 +10,8 @@
       <column type="gboolean"/>
       <!-- column-name new_func, COL_NEW_FUNC -->
       <column type="gpointer"/>
+      <!-- column-name name, COL_DESCRIPTION -->
+      <column type="gchararray"/>
       <!-- column-name vpn_plugin, COL_VPN_PLUGIN -->
       <column type="GObject"/>
       <!-- column-name vpn_service_type, COL_VPN_SERVICE_TYPE -->
