--- a/src/connection-editor/ce-page-general.ui
+++ b/src/connection-editor/ce-page-general.ui
@@ -91,7 +91,7 @@
         <property name="spacing">6</property>
         <child>
           <object class="GtkLabel" id="firewall_zone_label">
-            <property name="visible">True</property>
+            <property name="visible">False</property>
             <property name="can_focus">False</property>
             <property name="xalign">0</property>
             <property name="label" translatable="yes">Firewall _zone:</property>
