all: use Unicode in translatable strings
See https://developer.gnome.org/hig/stable/typography.html

--- a/src/connection-editor/ce-page-dcb.ui
+++ b/src/connection-editor/ce-page-dcb.ui
@@ -373,7 +373,7 @@
             </child>
             <child>
               <object class="GtkButton" id="pfc_options_button">
-                <property name="label" translatable="yes">Options...</property>
+                <property name="label" translatable="yes">Options…</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -448,7 +448,7 @@
             </child>
             <child>
               <object class="GtkButton" id="pg_options_button">
-                <property name="label" translatable="yes">Options...</property>
+                <property name="label" translatable="yes">Options…</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
