--- a/src/connection-editor/nm-connection-editor.ui
+++ b/src/connection-editor/nm-connection-editor.ui
@@ -203,7 +203,7 @@
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkButton" id="export_button">
-                    <property name="label" translatable="yes">_Export...</property>
+                    <property name="label" translatable="yes">_Export…</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_underline">True</property>
