--- a/src/connection-editor/ce-page-ethernet.ui
+++ b/src/connection-editor/ce-page-ethernet.ui
@@ -116,11 +116,12 @@
         <property name="xalign">0</property>
         <property name="label" translatable="yes">_Speed:</property>
         <property name="use_underline">True</property>
+	<property name="margin_left">26</property>
         <property name="mnemonic_widget">ethernet_speed</property>
       </object>
       <packing>
-        <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
+        <property name="top_attach">2</property>
+        <property name="bottom_attach">3</property>
         <property name="x_options">GTK_FILL</property>
         <property name="y_options"/>
       </packing>
@@ -140,8 +141,8 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="right_attach">2</property>
-        <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
+        <property name="top_attach">2</property>
+        <property name="bottom_attach">3</property>
         <property name="y_options"/>
       </packing>
     </child>
@@ -152,11 +153,12 @@
         <property name="xalign">0</property>
         <property name="label" translatable="yes">_Duplex:</property>
         <property name="use_underline">True</property>
+	<property name="margin_left">26</property>
         <property name="mnemonic_widget">ethernet_duplex</property>
       </object>
       <packing>
-        <property name="top_attach">2</property>
-        <property name="bottom_attach">3</property>
+        <property name="top_attach">3</property>
+        <property name="bottom_attach">4</property>
         <property name="x_options">GTK_FILL</property>
         <property name="y_options"/>
       </packing>
@@ -176,14 +178,14 @@
       <packing>
         <property name="left_attach">1</property>
         <property name="right_attach">2</property>
-        <property name="top_attach">2</property>
-        <property name="bottom_attach">3</property>
+        <property name="top_attach">3</property>
+        <property name="bottom_attach">4</property>
         <property name="y_options"/>
       </packing>
     </child>
     <child>
       <object class="GtkCheckButton" id="ethernet_autonegotiate">
-        <property name="label" translatable="yes">Aut_onegotiate</property>
+        <property name="label" translatable="yes">Automatic link negotiation</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
@@ -192,8 +194,8 @@
       </object>
       <packing>
         <property name="right_attach">2</property>
-        <property name="top_attach">3</property>
-        <property name="bottom_attach">4</property>
+        <property name="top_attach">1</property>
+        <property name="bottom_attach">2</property>
         <property name="x_options">GTK_FILL</property>
         <property name="y_options"/>
       </packing>
