c-e: use Unicode quotation marks in new strings

--- a/src/connection-editor/ce-page-ethernet.ui
+++ b/src/connection-editor/ce-page-ethernet.ui
@@ -437,7 +437,7 @@
       <object class="GtkComboBox" id="ethernet_linkneg">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="tooltip_text" translatable="yes">Device link negotiation. If "Manual" is chosen, "Speed" and "Duplex" values will be forced without checking the device compatibility. If unsure, leave here "Ignore" or pick "Automatic".</property>
+        <property name="tooltip_text" translatable="yes">Device link negotiation. If “Manual” is chosen, “Speed” and “Duplex” values will be forced without checking the device compatibility. If unsure, leave here “Ignore” or pick “Automatic”.</property>
         <property name="model">model4</property>
         <child>
           <object class="GtkCellRendererText" id="renderer4"/>
@@ -475,7 +475,7 @@
       <object class="GtkComboBox" id="ethernet_speed">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="tooltip_text" translatable="yes">Speed value for static link negotiation, required only when "Ignore" and "Automatic" options are not selected. Before specifying a speed value be sure your device supports it.</property>
+        <property name="tooltip_text" translatable="yes">Speed value for static link negotiation, required only when “Ignore” and “Automatic” options are not selected. Before specifying a speed value be sure your device supports it.</property>
         <property name="model">model2</property>
         <child>
           <object class="GtkCellRendererText" id="renderer2"/>
@@ -513,7 +513,7 @@
       <object class="GtkComboBox" id="ethernet_duplex">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="tooltip_text" translatable="yes">Duplex value for static link negotiation, required only when "Ignore" and "Automatic" options are not selected. Before specifying a duplex mode be sure your device supports it.</property>
+        <property name="tooltip_text" translatable="yes">Duplex value for static link negotiation, required only when “Ignore” and “Automatic” options are not selected. Before specifying a duplex mode be sure your device supports it.</property>
         <property name="model">model3</property>
         <child>
           <object class="GtkCellRendererText" id="renderer3"/>
