editor: fix clashing and missing accelerator keys on ethernet page

--- a/src/connection-editor/ce-page-ethernet.ui
+++ b/src/connection-editor/ce-page-ethernet.ui
@@ -423,8 +423,9 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="xalign">0</property>
-        <property name="label" translatable="yes">Link negotiation:</property>
+        <property name="label" translatable="yes">Lin_k negotiation:</property>
         <property name="use_underline">True</property>
+        <property name="mnemonic_widget">ethernet_linkneg</property>
       </object>
       <packing>
         <property name="top_attach">6</property>
@@ -497,7 +498,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="xalign">0</property>
-        <property name="label" translatable="yes">_Duplex:</property>
+        <property name="label" translatable="yes">Duple_x:</property>
         <property name="use_underline">True</property>
 	<property name="margin_left">26</property>
         <property name="mnemonic_widget">ethernet_duplex</property>
