Improve recently added translatable strings
Grammar, capitalization, trailing spaces, Unicode typography.

--- a/src/connection-editor/ce-page-proxy.ui
+++ b/src/connection-editor/ce-page-proxy.ui
@@ -17,7 +17,7 @@
           <object class="GtkLabel" id="proxy_method_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Method:     </property>
+            <property name="label" translatable="yes">Method:</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -50,11 +50,11 @@
     </child>
     <child>
       <object class="GtkCheckButton" id="proxy_browser_only_checkbutton">
-        <property name="label" translatable="yes">For Browser Only</property>
+        <property name="label" translatable="yes">For browser only</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
-        <property name="tooltip_text" translatable="yes">Use this Proxy Configuration for Only Browser Clients/schemes.</property>
+        <property name="tooltip_text" translatable="yes">Use this proxy configuration for only browser clients/schemes.</property>
         <property name="halign">start</property>
         <property name="xalign">0.5</property>
         <property name="draw_indicator">True</property>
@@ -74,7 +74,7 @@
           <object class="GtkLabel" id="proxy_pac_url_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">PAC URL:    </property>
+            <property name="label" translatable="yes">PAC URL:</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -86,7 +86,7 @@
           <object class="GtkEntry" id="proxy_pac_url_entry">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="tooltip_text" translatable="yes">URL from where PAC Script is to be obtained.</property>
+            <property name="tooltip_text" translatable="yes">URL from where the PAC script is to be obtained.</property>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -110,7 +110,7 @@
           <object class="GtkLabel" id="proxy_pac_script_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">PAC Script:   </property>
+            <property name="label" translatable="yes">PAC script:</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -120,7 +120,7 @@
         </child>
         <child>
           <object class="GtkButton" id="proxy_pac_script_import_button">
-            <property name="label" translatable="yes">Import script from a file...</property>
+            <property name="label" translatable="yes">Import script from a file…</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
